feat: add db to backend
