# ponderada1/internal/model/deck.go
@@ -1,0 +1,8 @@
+package model
+
+type Deck struct {
+	Success   bool   `json:"success"`
+	DeckID    string `json:"deck_id"`
+	Remaining int    `json:"remaining"`
+	Shuffled  bool   `json:"shuffled"`
+}
